# MiNotes

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  UX-PRD.md
crates/minotes-app/: index.html  package-lock.json  package.json
crates/minotes-app/src/: App.tsx  main.tsx  styles.css
crates/minotes-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/minotes-app/src-tauri/capabilities/: default.json
crates/minotes-app/src-tauri/src/: lib.rs  main.rs
crates/minotes-app/src/components/: AllPagesView.tsx  BacklinksPanel.tsx  BlockContextMenu.tsx  BlockItem.tsx  CalendarWidget.tsx  CanvasMode.tsx  CssSnippetManager.tsx  CustomViewContainer.tsx  EmptyState.tsx  FolderSettingsPanel.tsx  GraphSwitcher.tsx  GraphView.tsx  LinkPreview.tsx  MiniPageView.tsx  MobileNav.tsx  ObsidianPluginBrowser.tsx  PageView.tsx  PdfViewer.tsx  PluginManager.tsx  QueryPanel.tsx  ReviewPanel.tsx  Sidebar.tsx  (+8 more)
crates/minotes-cli/: Cargo.toml
crates/minotes-cli/src/: main.rs  output.rs
crates/minotes-cli/src/commands/: block.rs  events.rs  export.rs  folder.rs  graph.rs  journal.rs  links.rs  mod.rs  page.rs  property.rs  query.rs  search.rs  sync.rs
crates/minotes-core/: Cargo.toml
crates/minotes-core/src/: db.rs  error.rs  git_cmd.rs  lib.rs  links.rs  models.rs  search.rs  sync_manager.rs
crates/minotes-core/src/repo/: aliases.rs  archive.rs  blocks.rs  cards.rs  crdt.rs  events.rs  export.rs  favorites.rs  folders.rs  graph.rs  graphs.rs  highlights.rs  links.rs  mod.rs  pages.rs  plugins.rs  properties.rs  schemas.rs  snippets.rs  sync.rs  templates.rs  trash.rs
docs/: PRD-editor-improvements.md  PRD-encryption.md  PRD-git-sync.md  PRD-kanban.md  PRD-mindmap.md  PRD-sidebar-navigation.md  WSL2-clipboard-setup.md
tests/: UX-REVIEW.md  e2e-test.sh  funnel-test.sh  quick-test.sh  slash-test.sh  smoke-test.sh  user-journey-test.sh  ux-test.sh
(+50 files in other folders)
