[package]
name = "minotes-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minotes"
path = "src/main.rs"

[dependencies]
minotes-core = { path = "../minotes-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
