[package]
name = "minotes-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "minotes_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
minotes-core = { path = "../../minotes-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"
